--- a/templates/includes/_results_modal.html
+++ b/templates/includes/_results_modal.html
@@ -21,7 +21,7 @@
             <ul class="space-y-2">
                 <template x-for="event in results" :key="event.EvnPS_id">
                     <li class="p-3 rounded-md border border-gray-200 hover:bg-indigo-50 hover:shadow-sm cursor-pointer group flex justify-between items-center transition duration-150 ease-in-out"
-                        @click="selectEvent(event.EvnPS_id)">
+                        @click="selectEvent(event)">
                         <div class="text-sm">
                             <p class="font-medium text-gray-900">
                                 <span x-text="`🧍‍♂️ ${event.Person_Surname} ${event.Person_Firname} ${event.Person_Secname || ''}`.trim()"></span>
@@ -31,6 +31,7 @@
                                 <br>
                                 <span class="text-gray-600">🗂️ Карта №: </span>
                                 <span x-text="event.EvnPS_NumCard" class="text-red-400 font-semibold"></span>
+
                             </p>
                         </div>
                         <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-gray-400 group-hover:text-indigo-600 transition duration-150 ease-in-out" fill="none" viewBox="0 0 24 24" stroke="currentColor">
